- rehuff - http://wiki.xiph.org/Rehuff
- tidy-html5 c63cc39 - http://www.paehl.com/open_source/?HTML_Tidy_for_HTML5
- TruePNG 0.4.2.1 - http://x128.ho.ua/pngutils.html
- ZLib 1.2.8 - http://www.zlib.net
- zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress


XXXX - YYYY
- Launch TruePNG before PNGOut to improve PNG compression (trlkly).
- Updated TruePNG to 0.4.2.1.
- Updated jpegoptim to 1.4.0 beta (custom built).
- Do not suffix shortcuts on the installed with x86 or x64, since only once will be available (trlkly).
- Improved GUI drawing performance.
- Some code base preparation in order to implement a new run plugin mecanism that will be easier to maintain.
- Source code migrated to a subversion repositoryrepository.



6.80 - 2014/04/28
- Added Nokia Refocus/SmartCam .NAR and Opera extensions .OEX extensions to the ZIP tool chain (Jaff).
- Added .JPE and THM extension to the JPEG tool chain (Jaff).
- Added the /y switch on TruePNG implemented in 6.70 which will cause it to ask for overwriting existing file each time the plugin was used.
- Fixed a cosmetic problem where skipped files were counted sometimes in the stats as producing a size saving.
- Minor source code improvements.

6.70 - 2014/04/27
- Faster PDF compression upgrading to Ghostcript 9.14.
- Improved deflate compression by better combining deflopt and defluff.
- Improved JPEG compression ratio including jhead.
- Improved PNG compression ratio including TruePNG.
- Improved GIF compression ratio upgrading to gifsicle 1.83 (custom build).
- Upgraded jpegoptim to 1.3.1 (custom build with libjpeg 9).
- jsmin build is now faster in both Win32 and Win64 versions.
- Updated to ImageMagick 6.8.9.0.
- Fixed a bug introduced in 6.50 that could cause files with extensions longer than 3 characters to not be processed.
- Some minor optimizations and code cleanup.

6.60 - 2014/04/26
- Fixes extra title bar on Metropolis and Windows themes (trlkly).